# AAAI22-egrd

./: LICENSE  README.md
aaai22-code/: CMakeLists.txt  README.txt  comp_tree.h  design.h  environment.cpp  environment.h  foctl.cpp  foctl.h  foctl_eval.h  foctl_parser.ypp  foctl_reader.cpp  foctl_reader.h  foctl_scanner.ll  goal_query.cpp  goal_query.h  gqs_parser.ypp  gqs_reader.cpp  gqs_reader.h  gqs_scanner.ll  graph.h  main.cpp  name_id_map.cpp  name_id_map.h  shared.cpp  shared.h  string_processing.cpp  string_processing.h
aaai22-code/executable/: foctl-linux-x86-64
aaai22-example/: README.txt
aaai22-example/example1-EP/: env.txt  gqs.dot  gqs.txt
aaai22-example/example2-choice-vertex/: config.txt  env.dot  env.txt  gqs.dot  gqs.txt
aaai22-example/figure1-strongly-matched/: env.dot  env.txt  gqs_1.dot  gqs_1.txt  gqs_2.dot  gqs_2.txt
aaai22-example/figure2-weakly-matched/: gqs.dot  gqs.txt
aaai22-example/figure3-exclude-all/: env.dot  env.txt  gqs.dot  gqs.txt
aaai22-example/figure4-five-edge-types/: env.dot  env.txt  gqs.dot  gqs.txt
